Fixed build and compile with 9, 11, 14, 17 and 18. Issues #76 #77 and partial #75